--- a/composer.json
+++ b/composer.json
@@ -6,7 +6,7 @@
 	},
 	"require-dev": {
 		    "mockery/mockery": "0.7.2",
-		    "behat/behat": "2.4.*@stable",
+		    "behat/behat": "2.4.*",
 		    "guzzle/guzzle": "2.4.*"
 		},
 	"autoload": {
