--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,8 @@
 			"app/commands",
 			"app/controllers",
 			"app/models",
+			"app/repositories",
+			"app/exceptions",
 			"app/database/migrations",
 			"app/database/seeds",
 			"app/tests/TestCase.php"
