--- a/composer.json
+++ b/composer.json
@@ -16,6 +16,7 @@
 			"app/models",
 			"app/repositories",
 			"app/exceptions",
+			"app/serviceProviders",
 			"app/database/migrations",
 			"app/database/seeds",
 			"app/tests/TestCase.php"
