--- a/behat-default.yml
+++ b/behat-default.yml
@@ -4,3 +4,4 @@ default:
         base_url: http://api.ontheroad.dev
         root_dir: /var/www/api
         cli_env: local
+        users: {c.desneuf@gmail.com: password}
